--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 </head>
 
 <body class="main-content">
-  <header class="section sec1 header active">
+  <header class="section sec1 header active" id="home">
 
   </header>
 
   <main>
-    <section class="section sec2 about"></section>
-    <section class="section sec3 portfolio"></section>
-    <section class="section sec4 contact"></section>
+    <section class="section sec2 about" id="about"></section>
+    <section class="section sec3 portfolio" id="portfolio"></section>
+    <section class="section sec4 contact" id="contact"></section>
   </main>
 
   <div class="controls">
 
-    <div class="control control-1 active-btn">
+    <div class="control active-btn" data-id="home">
       <i class="fa-solid fa-house"></i>
     </div>
 
-    <div class="control control-2">
+    <div class="control" data-id="about">
       <i class="fa-solid fa-user-graduate"></i>
     </div>
 
-    <div class="control control-3">
+    <div class="control" data-id="portfolio">
       <i class="fa-solid fa-folder-open"></i>
     </div>
 
-    <div class="control control-4">
+    <div class="control" data-id = contact>
       <i class="fa-solid fa-address-book"></i>
     </div>
 
-
+<script src="app.js"></script>
 </body>
 
 </html>
